<resources>
    <string name="app_name">一川学霸陪练</string>
    <string name="others_middle_geography">com.kaoba.midgeography</string>
    <string name="others_middle_hua_xue">com.kaoba.midchemistry</string>
    <string name="others_middle_history">com.kaoba.midhistory</string>
    <string name="others_middle_sheng_wu">com.kaoba.midbiology</string>
    <string name="others_middle_wu_li">com.kaoba.midphysics</string>
    <string name="others_middle_zheng_zi">com.kaoba.midpolitics</string>
    <string name="package_name_qq">com.tencent.mobileqq</string>
    <string name="package_name_ding_ding">com.alibaba.android.rimet</string>
    <string name="package_name_we_chat">com.tencent.mm</string>
    <string name="package_name_xue_xi_qiang_guo">cn.xuexi.android</string>
    <string name="package_name_quan_li_shi">com.allhistory.dls.marble</string>
    <string name="package_name_han_yu_zi_dian">com.apprush.game.chinesechar</string>
    <string name="package_name_bi_shen_zuo_wen">com.bishen.zuowen</string>
    <string name="package_name_du_du_math">com.enuma.todomathcn</string>
    <string name="package_name_ke_han_xue_yuan">org.khanacademy.android</string>
    <string name="package_name_moose_math">com.duckduckmoosedesign.km</string>
    <string name="package_name_pythagorea">com.hil_hk.pythagorea</string>
    <string name="package_name_ke_ke_xue_ba">com.kekenet.xueba</string>
    <string name="package_name_xiao_xue_tong_bu">com.haojiazhang.xxb.english</string>
    <string name="package_name_yi_qi_xue">com.yiqizuoye.jzt</string>
    <string name="package_name_jing_you">jyeoo.app.ystudy</string>
    <string name="package_name_mo_fa_ti_ku">com.mofaxiao.student</string>
    <string name="package_name_yuan_ti_ku">com.fenbi.android.gaozhong</string>
    <string name="package_name_ou_la">com.ola100.app</string>
    <string name="package_name_qu_wei_lian">com.leleketang.SchoolFantasy</string>
    <string name="package_name_chu_zhong_di_li">com.kaoba.midgeography</string>
    <string name="package_name_chu_zhong_hua_xue">com.kaoba.midchemistry</string>
    <string name="package_name_chu_zhong_li_shi">com.kaoba.midhistory</string>
    <string name="package_name_chu_zhong_sheng_wu">com.kaoba.midbiology</string>
    <string name="package_name_chu_zhong_math">com.gaoha.mathsplus</string>
    <string name="package_name_chu_zhong_wu_li">com.kaoba.midphysics</string>
    <string name="package_name_chu_zhong_english">com.gaoha.english</string>
    <string name="package_name_chu_zhong_chinese">com.kaoba.yuwen</string>
    <string name="package_name_chu_zhong_zheng_zhi">com.kaoba.midpolitics</string>
    <string name="package_name_gao_zhong_di_li">com.xiangqi.geography</string>
    <string name="package_name_gao_zhong_hua_xue">com.xiangqi.chemistry</string>
    <string name="package_name_gao_zhong_li_shi">com.csliyu.history</string>
    <string name="package_name_gao_zhong_sheng_wu">com.xiangqi.biology</string>
    <string name="package_name_gao_zhong_math">com.xiangqi.math</string>
    <string name="package_name_gao_zhong_wu_li">com.xiangqi.physics</string>
    <string name="package_name_gao_zhong_english">com.xiangqi.highschool</string>
    <string name="package_name_gao_zhong_chinese">com.xiangqi.gzchinese</string>
    <string name="package_name_gao_zhong_quan_ce">com.giant.high</string>
    <string name="package_name_three_dan_ci">com.youdao.kiddict</string>
    <string name="package_name_bai_ci_zhan">com.jiongji.andriod.card</string>
    <string name="package_name_ai_bei_dan_ci">com.shark.crazyword</string>
    <string name="package_name_molly">org.pbskids.mollyofdenali</string>
    <string name="package_name_play_games">org.pbskids.gamesapp</string>
    <string name="package_name_play_engineering">org.pbskids.playandlearnengineering</string>
    <string name="package_name_play_science">org.pbskids.playandlearnscience</string>
    <string name="package_name_puzzle_kids">com.rvappstudios.jigsaw.puzzles.kids</string>
    <string name="package_name_xin_gai_nian_quan_ce">com.giant.newconcept</string>
    <string name="package_name_civia_machine">cn.civaonline.ccstudentsclient</string>
    <string name="package_name_duo_lin_guo">com.duolingo</string>
    <string name="package_name_ef_hello">com.ef.efhello</string>
    <string name="package_name_bai_ci_zhan_ai_yue_du">com.baicizhan.ireading</string>
    <string name="package_name_ko_yu_machine">com.ccenglish.parent</string>
    <string name="package_name_abc_reading">com.tal.abctimelibrary</string>
    <string name="package_name_read_long">com.google.android.apps.seekh</string>
    <string name="package_name_reading_pro">cn.readingprotoc.phone</string>
    <string name="package_name_kids_sight_words">com.intellijoy.sightwords</string>
    <string name="package_name_sight_words">cz.cfc.androidgp.sightwords</string>
    <string name="package_name_abc_spelling">com.rvappstudios.abc.spelling.toddler.spell.phonics</string>
    <string name="package_name_abc_kids_phonics">com.rvappstudios.abc_kids_toddler_tracing_phonics</string>
    <string name="package_name_play_sight_words">com.playsightwords</string>
    <string name="package_name_speed_phonics">com.eltkorea.speedphonics</string>
    <string name="package_name_startfall_abcs">com.starfall.StarfallABCs</string>
    <string name="package_name_startfall_learn_read">air.com.starfall.ltr</string>
    <string name="package_name_khan_kids">org.khankids.android</string>
    <string name="package_name_math_kids">com.rvappstudios.math.kids.counting</string>
    <string name="package_name_dong_ting_hui_ben">com.wenxi.audiobooks</string>
    <string name="package_name_hai_ni_man_english">com.diiiapp.hnm</string>
    <string name="package_name_raz">com.razkidscamb.americanread.android.architecture.newrazapp</string>
    <string-array name="others_group">
        <item>@string/others_middle_geography</item>
        <item>@string/others_middle_hua_xue</item>
        <item>@string/others_middle_history</item>
        <item>@string/others_middle_sheng_wu</item>
        <item>@string/others_middle_wu_li</item>
        <item>@string/others_middle_zheng_zi</item>
    </string-array>
    <string-array name="go_class_group">
        <item>@string/package_name_qq</item>
        <item>@string/package_name_ding_ding</item>
        <item>@string/package_name_we_chat</item>
    </string-array>
    <string-array name="math_group">
        <item>@string/package_name_du_du_math</item>
        <item>@string/package_name_moose_math</item>
        <item>@string/package_name_pythagorea</item>
        <item>@string/package_name_ke_han_xue_yuan</item>
    </string-array>
    <string-array name="yu_wen_group">
        <item>@string/package_name_han_yu_zi_dian</item>
        <item>@string/package_name_xue_xi_qiang_guo</item>
        <item>@string/package_name_quan_li_shi</item>
        <item>@string/package_name_bi_shen_zuo_wen</item>
    </string-array>
    <string-array name="mo_er_duo_group">
        <item>@string/package_name_khan_kids</item>
        <item>@string/package_name_math_kids</item>
        <item>@string/package_name_dong_ting_hui_ben</item>
        <item>@string/package_name_hai_ni_man_english</item>
        <item>@string/package_name_raz</item>
    </string-array>
    <string-array name="xue_pin_du_group">
        <item>@string/package_name_speed_phonics</item>
        <item>@string/package_name_abc_kids_phonics</item>
        <item>@string/package_name_startfall_abcs</item>
        <item>@string/package_name_startfall_learn_read</item>
        <item>@string/package_name_kids_sight_words</item>
        <item>@string/package_name_play_sight_words</item>
        <item>@string/package_name_sight_words</item>
        <item>@string/package_name_abc_reading</item>
    </string-array>
    <string-array name="ai_yue_du_group">
        <item>@string/package_name_read_long</item>
        <item>@string/package_name_reading_pro</item>
        <item>@string/package_name_abc_reading</item>
        <item>@string/package_name_bai_ci_zhan_ai_yue_du</item>
        <item>@string/package_name_ko_yu_machine</item>
    </string-array>
    <string-array name="qin_lian_xi_group">
        <item>@string/package_name_duo_lin_guo</item>
        <item>@string/package_name_ef_hello</item>
        <item>@string/package_name_xin_gai_nian_quan_ce</item>
        <item>@string/package_name_civia_machine</item>
    </string-array>
    <string-array name="bei_dan_ci_group">
        <item>@string/package_name_ai_bei_dan_ci</item>
        <item>@string/package_name_bai_ci_zhan</item>
        <item>@string/package_name_three_dan_ci</item>
    </string-array>
    <string-array name="qu_yi_zhi_group">
        <item>@string/package_name_puzzle_kids</item>
        <item>@string/package_name_play_games</item>
        <item>@string/package_name_molly</item>
        <item>@string/package_name_play_science</item>
        <item>@string/package_name_play_engineering</item>
    </string-array>
    <string name="pin_du">学拼读</string>
    <string name="mo_er_duo">磨耳朵</string>
    <string name="liu_li_shuo">流利说</string>
    <string name="ai_yue_du">爱阅读</string>
    <string name="qin_lian_xi">勤练习</string>
    <string name="bei_dan_ci">背单词</string>
    <string name="qi_yi_zhi">趣益智</string>
    <string name="math">数学</string>
    <string name="language">语文</string>
    <string name="others">其他</string>
    <string name="date">日期</string>
    <string name="total_length">总时长</string>
</resources>